testsuite/tests/esf/typecheck/should_fail/bind_malformed_type.sf
let f (x:A) = x in f
